[package]
name = "kata-daily"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = { version = "0.7.3", features = ['glob'] }
serde = { version = "1.0.159", features = ['derive'] }
toml = "0.7.3"
